# hermes-sudo

./: FORKING.md  README.md  __init__.py  after-install.md  install.sh  plugin.yaml  pyproject.toml  register.sh  schemas.py  tools.py
patches/: hermes-agent.patch
tests/: conftest.py  test_tools.py
tests_integration/: conftest.py  test_integration.py
