[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-sudo"
version = "1.0.0"
description = "Secure ephemeral sudo access for hermes-agent via system PAM authentication"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "__pycache__"]
